# convoy_ros

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml
convoy_bringup/: CMakeLists.txt  package.xml
convoy_bringup/config/: gym_bridge_multi.yaml  mux.yaml  real.yaml  sensors.yaml  sim.yaml  teleop.yaml
convoy_bringup/config/veh_0/: pozyx.yaml  vesc.yaml
convoy_bringup/config/veh_1/: pozyx.yaml  vesc.yaml
convoy_bringup/config/veh_2/: pozyx.yaml  vesc.yaml
convoy_bringup/config/veh_3/: pozyx.yaml  vesc.yaml
convoy_bringup/config/veh_4/: pozyx.yaml  vesc.yaml
convoy_bringup/config/veh_5/: pozyx.yaml  vesc.yaml
convoy_bringup/data/: levine_waypoints.csv
convoy_bringup/launch/: real_utils.launch.py  real_veh_bringup.launch.py  sim_convoy.launch.py  sim_veh_bringup.launch.py
convoy_bringup/maps/: isec.pgm  isec.yaml
convoy_bringup/rviz/: sim_gym_bridge.rviz  veh_vis.rviz
convoy_bringup/scripts/: gym_bridge_multi.py
convoy_bringup/urdf/: racecar.xacro
convoy_control/: CMakeLists.txt  README.md  package.xml
convoy_control/convoy_control/dynamics/: bicycle_dynamics.py  double_int_dynamics.py  linear_long_accel.py  linear_long_vel.py
convoy_control/convoy_control/linear_feedback/: linear_feedback.py
convoy_control/convoy_control/mpc/: bicycle_mpc.py  controller_base.py  dmpc.py  double_int_mpc.py  sparse_l1_pfmpc.py  sparse_l1_pfmpc_vel.py  sparse_linear_mpc.py  sparse_quad_pfmpc.py  sparse_quad_pfmpc_vel.py
convoy_control/convoy_control/nn_model/: feedforward.py
convoy_control/convoy_control/pure_pursuit/: pure_pursuit.py
convoy_control/convoy_control/stanley/: stanley.py
convoy_control/convoy_control/utils/: longitudinal_state.py  sinusoidal_reference.py  step_reference.py
convoy_control/launch/: head_algorithms.launch.py  trail_algorithms.launch.py
convoy_control/models/: vel_dyn_ctrl_pf_leaky_relu.pt  vel_dyn_ctrl_pf_leaky_relu_5_vehs_encoded.pt
convoy_control/scripts/: drive_controller.py
convoy_control/scripts/full_control/: bicycle_mpc.py
convoy_control/scripts/lateral_control/: pure_pursuit.py  stanley.py
convoy_control/scripts/longitudinal_control/: constant_current.py  constant_input.py  dmpc.py  double_int_mpc.py  l1_pfmpc.py  linear_feedback.py  linear_mpc.py  model_feedback.py  nn_feedback.py  quad_pfmpc.py  track_vl.py  virtual_leader.py
convoy_data/: CMakeLists.txt  package.xml
convoy_data/data/: iser_l1_pfmpc_0_0-10k.csv  iser_l1_pfmpc_1_0-10k.csv  iser_l1_pfmpc_2_0-10k.csv  iser_l1_pfmpc_3_0-10k.csv  iser_l1_pfmpc_4_0-10k.csv  iser_l1_pfmpc_5_0-10k.csv  iser_l1_pfmpc_6_0-10k.csv  iser_l1_pfmpc_7_0-10k.csv  iser_l1_pfmpc_8_0-10k.csv  iser_l1_pfmpc_9_0-10k.csv  iser_lfbk_0_0-10k.csv  iser_lfbk_1_0-10k.csv  iser_lfbk_2_0-10k.csv  iser_lfbk_3_0-10k.csv  iser_lfbk_4_0-10k.csv  iser_lfbk_5_0-10k.csv  iser_lfbk_6_0-10k.csv  iser_lfbk_7_0-10k.csv  iser_lfbk_8_0-10k.csv  iser_lfbk_9_0-10k.csv  iser_quad_pfmpc_0_0-10k.csv  iser_quad_pfmpc_1_0-10k.csv  iser_quad_pfmpc_2_0-10k.csv  iser_quad_pfmpc_3_0-10k.csv  iser_quad_pfmpc_4_0-10k.csv  iser_quad_pfmpc_5_0-10k.csv  iser_quad_pfmpc_6_0-10k.csv  iser_quad_pfmpc_7_0-10k.csv  iser_quad_pfmpc_8_0-10k.csv  iser_quad_pfmpc_9_0-10k.csv
convoy_data/launch/: bag_process.launch.py  bag_process_sim.launch.py  bag_record_vehicle.launch.py  bag_record_vehicle_sim.launch.py  log_data.launch.py
convoy_data/plotjuggler/: predecessor_error_layout.xml
convoy_data/scripts/: bag_process.py  bag_process_sim.py  log_data.py
convoy_interfaces/: CMakeLists.txt  package.xml
convoy_interfaces/msg/: ConvoyControlData.msg  CourseData.msg  DesiredDistance.msg  LateralControl.msg  LongitudinalControl.msg  LongitudinalState.msg  LongitudinalStateTrajectory.msg  NeighborInfo.msg  NeighborInfoArray.msg  SafeSpeed.msg  TrainResetPositions.msg  Trajectory.msg
convoy_learning/: CMakeLists.txt  package.xml
convoy_learning/config/: learning_params.yaml
convoy_learning/convoy_learning/: model.py
convoy_learning/launch/: convoy_learn.launch.py  crash_detect.launch.py
convoy_learning/models/: lfbk_nn_patapsco.txt  pfmpc_nn_patapsco.txt  pfmpc_nn_yenice.txt
convoy_learning/scripts/: convoy_learn.py  crash_detect.py
convoy_nav2/: CMakeLists.txt  README.md  package.xml
convoy_nav2/config/: amcl.yaml  slam.yaml
convoy_nav2/launch/: amcl.launch.py  slam.launch.py
convoy_perception/: CMakeLists.txt  package.xml
convoy_perception/convoy_perception/: lidar_proc.py
convoy_perception/launch/: neighbor_localization.launch.py  pozyx_ranging.launch.py  preprocess_lidar.launch.py  wall_seg_node.launch.py
convoy_perception/scripts/: course_walls_seg.py  neighbor_localization_real.py  neighbor_localization_sim.py  preprocess_lidar.py
convoy_planning/: CMakeLists.txt  package.xml
convoy_planning/config/: plan_bicycle_mpc.yaml  plan_double_int.yaml  plan_general.yaml
convoy_planning/convoy_planning/: plan_utils.py
convoy_planning/launch/: poly_planner_head.launch.py  poly_planner_trail.launch.py
convoy_planning/scripts/: poly_planner_head.py  poly_planner_trail.py
convoy_ros/: CMakeLists.txt  package.xml
convoy_safety/: CMakeLists.txt  README.md  package.xml
convoy_safety/launch/: safety.launch.py
convoy_safety/scripts/: autonomous_control_node.py  calculate_safe_speed.py
data_analysis/scripts/: convoy_sysid.py  iros_2024_figures.py  iser_2023_figures.py  iser_2023_sim_figures.py  iser_figures.py  iser_sim_figures.py  itsc_2024_figures.py  velocity_io_model.py  visualize_convoy_data.py  visualize_convoy_data_sim.py  visualize_err_data_sim.py  visualize_pfmpc_lfbk_err.py  visualize_trial.py
docs/: camera_calibration.md  dot_files.md  misc.md  motor_controller_setup.md  network_setup.md  simulation.md  teleop.md  testing.md  vehicle_bringup.md  vehicle_setup.md
