<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>convoy_bringup</name>
  <version>0.0.0</version>
  <description>The convoy_bringup package</description>
  <maintainer email="michael.h.shaham@gmail.com">mshaham</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>xacro</depend>
  <depend>navigation2</depend>

  <depend>joy_linux</depend>
  <depend>urg_node</depend>
  <depend>usb_cam</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
