<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>convoy_nav2</name>
  <version>0.0.0</version>
  <description>Slam and localization for convoy</description>
  <maintainer email="michael.h.shaham@gmail.com">Michael Shaham</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
