<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>convoy_ros</name>
  <version>0.0.0</version>
  <description>Meta package that contains all packages for convoy_ros</description>
  <maintainer email="michael.h.shaham@gmail.com">Michael Shaham</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>convoy_bringup</depend>
  <depend>convoy_control</depend>
  <depend>convoy_interfaces</depend>
  <depend>convoy_perception</depend>
  <depend>convoy_planning</depend>
  <depend>convoy_safety</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
